# bulin

./: .clang-format  .clang-tidy  .gitignore  .prompt.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  HACKING.md  PROJECT_STATUS.md  README.md  TODOS.md  Trunk.toml  conanfile.py  demo.sh  example.frag  index.html  vcpkg.json
.github/workflows/: ci.yml
assets/: WGSL.sublime-syntax  shader.wgsl  test_project.bulin  test_project_2.bulin  test_shader.wgsl
cmake/: dev-mode.cmake  docs-ci.cmake  docs.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  spell-targets.cmake  variables.cmake
conan/profiles/: linux_clang_18_cxx_20_ninja
example/: test_project.bulin  test_shader.glsl
executables/imgui/: CMakeLists.txt  main.cpp
include/bulin/application/: app.hpp  cereal.hpp  model.hpp
include/bulin/graphics/: flat_shader.hpp  shader_data.hpp  shader_model.hpp  types.hpp
libs/application/: CMakeLists.txt
libs/application/include/bulin/application/: app.hpp  app_fwd.hpp  update.hpp
libs/application/src/: app.cpp  model.cpp  update.cpp
libs/graphics/: CMakeLists.txt
libs/graphics/include/bulin/graphics/: graphics_fwd.hpp  shader_model.hpp  texture.hpp  types.hpp
libs/graphics/src/: flat_shader.cpp  shader_model.cpp  texture.cpp
libs/model/: CMakeLists.txt
libs/model/include/bulin/model/: cereal.hpp  model.hpp  model_fwd.hpp  update.hpp
libs/model/src/: cereal.cpp  model.cpp  update.cpp
libs/ui/: CMakeLists.txt
libs/ui/include/bulin/ui/imgui/: draw.hpp
libs/ui/src/: draw.cpp
source/: app.cpp  flat_shader.cpp  flat_shader.hpp  item.cpp  item.hpp  lib.cpp  lib.hpp  main.cpp  model.cpp  model.hpp  shader_model.cpp  shader_model.hpp  texture.cpp
src/: background.rs  editor.rs  error.rs  layout.rs  lib.rs  main.rs  menu.rs  pipeline_update.rs  render.rs  render_new.rs  render_old.rs  shader.rs  shader_update.rs  text_editor.rs  ui.rs  uniforms.rs  uniforms_editor.rs  util.rs  viewer.rs  web.rs
src/editor/: highlighter.rs  visitor.rs
src/shader/: scene.rs
src/shader/scene/: pipeline.rs
src/shader/scene/pipeline/: buffer.rs  cube.rs  uniforms.rs  vertex.rs
src/shaders/: empty_frag.wgsl  vertex_shader.wgsl
src/text_editor/: content.rs  highlighter.rs  mod.rs  visitor.rs  wgsl_highlighter.rs
src/uniforms_editor/: time.rs  uniform.rs
src/util/: mod.rs  native.rs  web.rs
src/viewer/: canvasscene copy.rs  canvasscene.rs
src/viewer/canvasscene/: mod.rs  pipeline.rs  uniforms.rs
src/viewer/canvasscene/shaders/: empty_frag.wgsl  texture.wgsl  uniforms.wgsl  vertex_shader.wgsl
static/: index.html
test/: CMakeLists.txt
test/source/: bulin_test.cpp
