[package]
name = "bulin"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/NickelWenzel/iced", branch = "fix_wasm_custom_shaders", default-features = false, features = [
    "wgpu",
    "webgl",
    #"highlighter",
    "tokio",
    "debug",
    "image",
    "advanced",

] }

tokio = { version = "1.0" }
iced_wgpu = { git = "https://github.com/NickelWenzel/iced", branch = "fix_wasm_custom_shaders" }
iced_aw = { path = "../../github/iced_aw", default-features = false, features = [
    "menu",
    "number_input",
    "quad",
] }
bytemuck = "1.23"
rfd = "0.15.4"
once_cell = "1.21"
two-face = { version = "0.4.3", default-features = false, features = [
    "syntect-default-fancy",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
num-traits = "0.2.19"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasmtimer = { version = "0.4" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"

[patch.crates-io]
iced = { git = "https://github.com/NickelWenzel/iced", branch = "fix_wasm_custom_shaders" }
iced_core = { git = "https://github.com/NickelWenzel/iced", branch = "fix_wasm_custom_shaders" }
iced_widget = { git = "https://github.com/NickelWenzel/iced", branch = "fix_wasm_custom_shaders" }
