[package]
name = "bulin"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/NickelWenzel/iced", default-features = false, features = [
    "wgpu",
    "webgl",
    "highlighter",
    "tokio",
    "debug",
    "image",
    "advanced",
    "fira-sans",
] }

iced_highlighter = { git = "https://github.com/NickelWenzel/iced" }
iced_wgpu = { git = "https://github.com/NickelWenzel/iced" }
iced_aw = { git = "https://github.com/NickelWenzel/iced_aw", default-features = false, features = [
    "number_input",
] }
bytemuck = "1.23"
rfd = "0.15.4"
once_cell = "1.21"
syntect = { version = "5.2", default-features = false, features = [
    "default-fancy",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
num-traits = "0.2.19"
wasmtimer = { version = "0.4" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
console_log = "1.0"

[patch.crates-io]
iced = { git = "https://github.com/NickelWenzel/iced" }
iced_core = { git = "https://github.com/NickelWenzel/iced" }
iced_widget = { git = "https://github.com/NickelWenzel/iced" }
